force-app/main/default/objects/OpportunitySnapshot__c/OpportunitySnapshot__c.object-meta.xml
<CustomObject>
    <label>OpportunitySnapshot</label>
    <nameField>
        <displayFormat>OPPSP-{0000000000}</displayFormat>
        <label>OPP Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunitySnapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>