force-app/main/default/objects/OpportunitySnapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Amount__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>